--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,8 @@
 #
-#Thu Sep 25 21:41:04 EEST 2014
-version.minor=15
+#Fri Sep 26 05:45:08 EEST 2014
+curseforge_key=***REMOVED***
 version.mc=1.7.10
-version.build=30
+version.minor=15
+version.build=31
 version.super=0
 version.major=10
