--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 	}
 }
 
+apply plugin: 'curseforge'
 apply plugin: 'forge'
 
 // define some stuff.  hereby referenced as project.varName
@@ -47,8 +48,8 @@ minecraft {
 curse {
 	apiKey = config.curseforge_key // saved in my properties file. http://minecraft.curseforge.com/my-api-tokens
 	projectId = "224599" // my project url is http://minecraft.curseforge.com/mc-mods/224599-mystcraft/
-	changelog = ext.publishChangelog.text
-	releaseType = "full release"
+	changelog = project.publishChangelog.text
+	releaseType = "release" //The release type must be either 'alpha', 'beta', or 'release'
 	// the default obfuscated jar is uploaded by default
 	// artifact = project.file("some/jar/to/upload.jar")
 	// allows you to add extra compatible MC versions. The one specified in the minecraft{} block is used by default.
