--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
 		<ftp server="${ftp.server}" userid="${ftp.user}" password="${ftp.pass}" remotedir="${ftp.dir}">
 			<fileset file="${dir.output}/${projectname}-${version.mc}-${version.super}.${version.major}.${version.minor}.${version.build}-api.jar"/>
 			<fileset file="${dir.output}/${projectname}-${version.mc}-${version.super}.${version.major}.${version.minor}.${version.build}-dev.jar"/>
+			<fileset file="${dir.output}/${projectname}-${version.mc}-${version.super}.${version.major}.${version.minor}.${version.build}.jar"/>
 		</ftp>
 	</target>
 </project>
