--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Wed Oct 15 22:03:14 EEST 2014
-version.minor=0
+#Sat Nov 15 04:26:55 EET 2014
 version.mc=1.7.10
-version.build=00
+version.minor=0
+version.build=01
 version.super=0
 curseforge_key=***REMOVED***
 version.major=11
