Splits notebook into portfolio and folder Adds Slider GuiElement from nightwatch Refactors surface manager stuff from desk into separate element which needs to be extended by data provider Allows sprites rendered by GuiUtils to be colored Adds booster and portfolio to creative tab Existing notebooks map to new folder item Replaces notebook gui with surface view Refactors MystObjects Fixes issue with error handling in IMCHandler not giving full log Refactors item interfaces New icons for folder/portfolio Localization for folder/portfolio Updates buildscript to push to FC2 incoming Pulls (most of) NBTUtils from Nightwatch

--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,7 @@ def deployments = [
 	'dev'   : {"F:/Copy/Mystcraft/Mystcraft Testing/builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
 	'patron': {"C:/Users/Zach/Google Drive/Mystcraft Patreon Builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
 	'FC1'   : "F:/Seafile/incoming/ForgeCraft1/mods"
+	'FC2'   : "F:/Seafile/incoming/ForgeCraft2/mods"
 ]
 
 deployments.each { name, dir ->
