Fixes gradle script typo

--- a/build.gradle
+++ b/build.gradle
@@ -155,8 +155,8 @@ def deployments = [
 	'local' : "${project.userHome}/AppData/Roaming/.minecraft/F1.7.2/mods",
 	'dev'   : {"F:/Copy/Mystcraft/Mystcraft Testing/builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
 	'patron': {"C:/Users/Zach/Google Drive/Mystcraft Patreon Builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
-	'FC1'   : "F:/Seafile/incoming/ForgeCraft1/mods"
-	'FC2'   : "F:/Seafile/incoming/ForgeCraft2/mods"
+	'FC1'   : "F:/Seafile/incoming/ForgeCraft1/mods",
+	'FC2'   : "F:/Seafile/incoming/ForgeCraft2/mods",
 ]
 
 deployments.each { name, dir ->
