--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Mon Dec 15 19:31:42 EET 2014
+#Wed Dec 31 01:10:37 EST 2014
 version.mc=1.7.10
 version.minor=0
-version.build=11
+version.build=13
 version.super=0
 curseforge_key=***REMOVED***
 version.major=11
