--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Thu Jan 15 16:47:49 EST 2015
-version.minor=0
+#Tue Jan 20 11:02:26 EET 2015
 version.mc=1.7.10
-version.build=22
+version.minor=0
+version.build=23
 version.super=0
 curseforge_key=***REMOVED***
 version.major=11
