--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Sun Mar 29 00:38:47 EET 2015
-version.minor=2
+#Sat Apr 04 20:19:38 EEST 2015
+version.minor=3
 version.mc=1.7.10
-version.build=01
+version.build=00
 version.super=0
 curseforge_key=***REMOVED***
 version.major=11
