--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ curse {
 
 	// the default obfuscated jar is uploaded by default
 	// artifact = project.file("some/jar/to/upload.jar")
-	// additionalArtifact devJar
+	additionalArtifact devJar
 
 	// allows you to add extra compatible MC versions. The one specified in the minecraft{} block is used by default.
 	// addGameVersion "1.7.1"
