Prevents unrecognized IMC messages from throwing errors Logs the dim and provider ids of the base profiling dimension Makes the cleanup code more robust to handle unexpected force unloading of the world Makes baseline startup code more robust to handle the world being set to null by unloading Sets baseline world to 'keep loaded'

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ minecraft {
 curse {
 	apiKey = config.curseforge_key // saved in my properties file. http://minecraft.curseforge.com/my-api-tokens
 	projectId = "224599" // my project url is http://minecraft.curseforge.com/mc-mods/224599-mystcraft/
-	releaseType = "beta" //The release type must be either 'alpha', 'beta', or 'release'
+	releaseType = "release" //The release type must be either 'alpha', 'beta', or 'release'
 
 	changelog = project.publishChangelog.text
 
