--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,10 @@
 #
-#Sun Aug 02 06:52:08 EEST 2015
+#Mon Aug 03 03:38:47 EEST 2015
+version.minor=3
 version.mc=1.7.10
-version.minor=2
-version.build=01
+mavenuser=xcompwiz
+version.build=00
 version.super=0
 curseforge_key=***REMOVED***
+mavenpass=***REMOVED***
 version.major=12
