--- a/locations.gradle
+++ b/locations.gradle
@@ -1,7 +1,7 @@
 ext.jarDeploys = [
 	'local' : {"${project.userHome}/Downloads/Game Misc/MultiMC5/instances/Testing ${minecraft.version}/minecraft/mods/"},
 	'dev'   : {"F:/Copy/Mystcraft/Mystcraft Testing/builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
-	'patron': {"${project.userHome}/Google Drive/Mystcraft Patreon Builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
+	'patron': {"F:/Google Drive/development/projects/minecraft/mystcraft/Mystcraft Patreon Builds/${minecraft.version}/${config.version.super}.${config.version.major}.${config.version.minor}.${config.version.build}"},
 	'FC2'   : {"F:/Seafile/incoming/ForgeCraft2/mods"},
 ]
 ext.devDeploys = [
@@ -13,5 +13,5 @@ ext.APIDeploys = [
 ]
 ext.changelogDeploys = [
 	'dev'   : {"F:/Copy/Mystcraft/Mystcraft Testing/builds"},
-	'patron': {"${project.userHome}/Google Drive/Mystcraft Patreon Builds"},
+	'patron': {"F:/Google Drive/development/projects/minecraft/mystcraft/Mystcraft Patreon Builds"},
 ]
