--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 #
-#Mon Aug 03 03:38:47 EEST 2015
+#Thu Nov 12 00:36:51 EET 2015
 version.minor=3
 version.mc=1.7.10
 mavenuser=xcompwiz
-version.build=00
+version.build=01
 version.super=0
 curseforge_key=***REMOVED***
 mavenpass=***REMOVED***
