Minor fix for woirld info objects getting nested in some situations Built and published

--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 #
-#Thu Nov 12 00:36:51 EET 2015
-version.minor=3
+#Mon Apr 25 00:08:09 EEST 2016
 version.mc=1.7.10
+version.minor=3
 mavenuser=xcompwiz
-version.build=01
+version.build=02
 version.super=0
 curseforge_key=***REMOVED***
 mavenpass=***REMOVED***
