Build scripts updates

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,11 @@
 #
-#Mon Apr 25 00:08:09 EEST 2016
-version.mc=1.7.10
-version.minor=3
-mavenuser=xcompwiz
-version.build=02
-version.super=0
-curseforge_key=***REMOVED***
+#Wed Aug 03 01:39:06 EEST 2016
+version.build=03
 mavenpass=***REMOVED***
+curseforge_key=***REMOVED***
+mavenuser=maven_user
+version.minor=3
+version.mc=1.7.10
 version.major=12
+version.super=0
+mavenurl=scp://***REMOVED***/home/maven_user/maven
