--- a/build.gradle
+++ b/build.gradle
@@ -339,7 +339,7 @@ uploadArchives {
         mavenDeployer {
             configuration = configurations.deployerJars
 
-            repository(url: "scp://maven.xcompwiz.com/home/xcompwiz/maven") {
+            repository(url: config.mavenurl) {
 				authentication(userName: config.mavenuser, password: config.mavenpass)
             }
 
